打通mood check_in的功能，修复bug
